# plc

./: .bumpversion.cfg  README.md  pytest.ini  setup.cfg  tox.ini
src/plc/: __main__.py  defaults.py  file_processor.py  file_utils.py  llm_provider.py  message.py  model.py  open_router_provider.py  polyglot_language_converter.py  prog_lang_spec.py
tests/: conftest.py  main_test.py  test_defaults.py  test_end_to_end.py  test_file_processor.py  test_file_utils.py  test_polyglot_converter.py
tests/data/: .gitignore  converted_files.sqlite  mockito_test.java  processed-files.sqlite3
