[metadata]
name = plc
version = 0.0.2
author = Dr. Matthias Hölzl
author_email = tc@xantira.com
description = Convert slides between programming languages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/plc/
project_urls =
    Bug Tracker = https://github.com/hoelzl/plc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

install_requires =
    aiohttp>=3.9.5
    attrs>=23.1
    cattrs>=23.1
    click>=8.0
    loguru>=0.7.2
    platformdirs>=1.4


[options.extras_require]
dev =
    pytest>=8.3.2
    pytest-asyncio>=0.24.0


[options.packages.find]
where = src

[options.entry_points]
console_scripts :
    plc = plc.__main__:main